--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
-    "start:dev": "webpack serve",
+    "start": "webpack-dev-server --open",
+    "start:dev": "webpack serve --config webpack.dev.js",
+    "watch": "webpack --watch",
     "build": "webpack --config webpack.prod.js",
-    "build:dev": "webpack --config webpack.dev.js --color --progress"
+    "build:dev": "webpack --config webpack.dev.js --color --progress",
+    "server": "node server"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
     "csv-loader": "^3.0.3",
+    "express": "^4.17.1",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
@@ -26,6 +29,7 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.1.0",
     "webpack-cli": "^4.0.0",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0",
     "xml-loader": "^1.2.1"
