--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
-    "start:dev": "webpack serve --config webpack.dev.js",
+    "start": "webpack serve --config webpack.dev.js",
     "watch": "webpack --watch",
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js --color --progress",
