--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --config webpack.dev.js",
     "watch": "webpack --watch",
     "build": "webpack --config webpack.prod.js",
-    "build:dev": "webpack --config webpack.dev.js --color --progress",
+    "build:dev": "webpack --config webpack.dev.js",
     "server": "node server"
   },
   "keywords": [],
@@ -34,6 +34,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20"
   }
 }
