--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "csv-loader": "^3.0.3",
     "express": "^4.17.1",
     "file-loader": "^6.1.1",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
