--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
+    "start": "webpack --config webpack.dev.js",
     "watch": "webpack --watch",
-    "build:dev": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "server": "node server"
   },
