--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-loader": "^4.0.4",
     "style-loader": "^2.0.0",
     "webpack": "^5.1.0",
     "webpack-cli": "^4.0.0",
@@ -34,6 +35,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20"
   }
